fix: overlaping navbar - article

--- a/css/index.css
+++ b/css/index.css
@@ -55,11 +55,11 @@ header {
 	margin-left: 300px;
 	padding: 20px;
 	margin-bottom: 110px;
+
 }
 
 section article {
 	margin: 15px;
-	font-size: 16px;
 	text-align: justify;
 }
 
